--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -30,9 +30,10 @@ jobs:
           retention-days: 1
   verify-artifacts:
     runs-on: ubuntu-latest
+    needs: build-react-app
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: react-build-files
           path: react-buld-download-location
