--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -8,13 +8,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@
+
       - name: setup nodejs
         uses: actions/setup-node@v3
         with:
           node-version: "16"
+          
       - name: Install Dep
         run: npm ci
+
+      - name: List npm run
+        run: npm run
+
       - name: Build Project
         run: npm run build
       # This usually creates a 'build/' or 'dist/' folder
@@ -28,15 +34,18 @@ jobs:
           name: react-build-files
           path: build/
           retention-days: 1
+
   verify-artifacts:
     runs-on: ubuntu-latest
     needs: build-react-app
+
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: react-build-files
           path: react-buld-download-location
+
       - name: Verfiy the react-build-files
         run: |
           echo "list the dowload files"
