--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -8,13 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout repository
-        uses: actions/checkout@
+        uses: actions/checkout@v3
 
       - name: setup nodejs
         uses: actions/setup-node@v3
         with:
           node-version: "16"
-          
+
       - name: Install Dep
         run: npm ci
 
