update syntax in actions yml file to know the path of artifact

--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -49,4 +49,5 @@ jobs:
       - name: Verfiy the react-build-files
         run: |
           echo "list the dowload files"
+          pwd
           ls -lthr react-buld-download-location
